added operators/math calculators but still with erros in the results.
If applied, this commit will have added the function to calculate, operate and show the result.
The math calculations are providing strange results, need to be fixed.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <div class="container">
             <div class="display">
                 <div class="display-1">0</div>
-                <div class="display-2">0</div>
                 <div class="display-result">Result</div>
             </div>
             <div class="all-buttons">
@@ -23,7 +22,7 @@
                 <div class="button number">7</div>
                 <div class="button number">8</div>
                 <div class="button number">9</div>
-                <div class="button operator">X</div>
+                <div class="button operator">x</div>
                 <div class="button number">4</div>
                 <div class="button number">5</div>
                 <div class="button number">6</div>
