--- a/index.html
+++ b/index.html
@@ -12,28 +12,27 @@
         <div class="container">
             <div class="display">
                 <div class="display-1">0</div>
-                <div class="display-result">Result</div>
             </div>
             <div class="all-buttons">
                 <div class="button all-clear">C</div>
                 <div class="button last-clear">CE</div>
-                <div class="button operator">%</div>
-                <div class="button operator">/</div>
-                <div class="button number">7</div>
-                <div class="button number">8</div>
-                <div class="button number">9</div>
-                <div class="button operator">x</div>
-                <div class="button number">4</div>
-                <div class="button number">5</div>
-                <div class="button number">6</div>
-                <div class="button operator">-</div>
-                <div class="button number">1</div>
-                <div class="button number">2</div>
-                <div class="button number">3</div>
-                <div class="button operator">+</div>
-                <div class="button number btn-0">0</div>
-                <div class="button number dot">.</div>
-                <div class="button equal">=</div>
+                <div class="button operator" data-operator="percentage">%</div>
+                <div class="button operator" data-operator="divide">/</div>
+                <div class="button number" data-number="7">7</div>
+                <div class="button number" data-number="8">8</div>
+                <div class="button number" data-number="9">9</div>
+                <div class="button operator" data-operator="multiply">x</div>
+                <div class="button number" data-number="4">4</div>
+                <div class="button number" data-number="5">5</div>
+                <div class="button number" data-number="6">6</div>
+                <div class="button operator" data-operator="subtract">-</div>
+                <div class="button number" data-number="1">1</div>
+                <div class="button number" data-number="2">2</div>
+                <div class="button number" data-number="3">3</div>
+                <div class="button operator" data-operator="plus">+</div>
+                <div class="button number btn-0" data-number="0">0</div>
+                <div class="button number dot" data-number=".">.</div>
+                <div class="button equal" data-result="">=</div>
             </div>
         </div>
     </section>
