--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <div class="display-1">0</div>
             </div>
             <div class="all-buttons">
-                <div class="button all-clear">C</div>
-                <div class="button last-clear">CE</div>
-                <div class="button operator" data-operator="percentage">%</div>
+                <div class="button all-clear delete">C</div>
+                
+                
                 <div class="button operator" data-operator="divide">/</div>
                 <div class="button number" data-number="7">7</div>
                 <div class="button number" data-number="8">8</div>
